# Parallel-programming-NKU

./: .gitattributes  .gitignore  README.md
ann/: AI_APPENDIX.md  ANN_SIMD_FINAL_REPORT.md  ARM_RUN_GUIDE.md  PERF_EXPERIMENT_LOG.md  PERF_MEASUREMENT.md  PTHREAD_ARM_COMMANDS.md  PTHREAD_ARM_KUNPENG_HANDOFF.md  PTHREAD_EXPERIMENTS.md  PTHREAD_EXPERIMENT_CHECKLIST.md  Pthread.md  README.md  SIMD_COMPLETION_CHECKLIST.md  SIMD_HANDOFF.md  analyze_perf_counters.py  analyze_simd_assembly.py  ann_quant.h  ann_search.h  main  main.cc  openmp.md  openmp_cpu  plot_pthread.py  plot_pthread_report.py  plot_simd_paper.py  plot_simd_results.py  plot_x86_paper.py  pthread_benchmark.h  pthread_common.h  pthread_cuda_flat.cu  pthread_flat.h  pthread_hnsw.h  pthread_ivf.h  pthread_opencl_ivf.cc  pthread_openmp_host.cc  pthread_openmp_host.h  pthread_openmp_target_ivf.cc  pthread_pq.h  pthread_sdc.h  pthread_sq.h  pthread_sycl_flat.cc  (+20 more)
ann/files/analysis/: main_O2.s  (+2 more)
ann/report/: AI_APPENDIX.md  pthread_report.tex  pthread_report_tables.tex  simd_report.tex
ann/simd/: ANN_SIMD_REPORT_REQUIREMENTS.md  SIMD.md  ann_quant.h  plot_final.py
hw1/: .gitignore  CMakeLists.txt  Dockerfile
hw1/include/: bench_cpu_arch.h
hw1/report/data/: representative_results.csv  summary.json  vtune_summary.json
hw1/scripts/: build.sh  dump_asm.sh  generate_report_assets.py  perf_example.sh  run_bench.sh  test.sh  vtune_example.sh
hw1/src/: benchmark_main.c  common.c  matvec_cache_opt.c  matvec_extreme.c  matvec_naive.c  matvec_unroll.c  sum_extreme.c  sum_naive.c  sum_superscalar.c  sum_unroll.c
(+62 files in other folders)
